# kush

./: .gitignore  .pylintrc  CLAUDE.md  README.md  base_local_simulation.lst  pyproject.toml  requirements.txt  sas_auth.py  sas_base_casl_comparision.py  sas_environment_benchmark.py  setup.sas  test_benchmark.py  verify_setup.py
.claude/: settings.local.json
.github/workflows/: pylint.yml
data/: sas_tokens.json  simdata2.csv
original/: simdata.sas  ssr_sim_viya.sas
output/: modOC_base.xlsx  modOC_base.xlsx.bak  modsum_base.xlsx  modsum_base.xlsx.bak
programs/: base_local_simulation.sas  base_simulation.sas  casl_simulation.sas
