[project]
name = "sas-viya-test"
version = "0.1.0"
description = "SAS Viya CASL vs BASE SAS testing"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "urllib3>=1.26.0",
    "matplotlib>=3.5.0",
    "pandas>=2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
