[project]
name = "sas-viya-test"
version = "0.1.0"
description = "SAS Viya CASL vs BASE SAS testing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "urllib3>=1.26.0",
    "matplotlib>=3.5.0",
    "pandas>=2.0.3",
]

[project.urls]
Homepage = "https://github.com/your-username/sas-viya-test"
Repository = "https://github.com/your-username/sas-viya-test.git"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
